--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-63M3P01E7T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-63M3P01E7T');
+</script>
+  </head>
 <body>
 
 <h1>Home Page</h1>
