--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 
 <p>My first paragraph.</p>
 
+  <form action="/product.html">
+  <label for="cars">Choose a car:</label>
+  <select id="cars" name="cars">
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+    <option value="fiat">Fiat</option>
+    <option value="audi">Audi</option>
+  </select>
+  <input type="submit">
+</form>
 </body>
 </html>
 
