--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <p>My first paragraph.</p>
 
-  <form action="/product.html">
+  <form action="/Demo-Google-Analytics/product.html">
   <label for="cars">Choose a car:</label>
   <select id="cars" name="cars">
     <option value="volvo">Volvo</option>
