--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <option value="fiat">Fiat</option>
     <option value="audi">Audi</option>
   </select>
+    <input type="checkbox" id="emi" name="emi" value="true">
+  <label for="emi"> Opt EMI</label><br>
   <input type="submit">
 </form>
 </body>
